--- a/Kontakt.html
+++ b/Kontakt.html
@@ -46,18 +46,18 @@
   <main>
     <div class="news-content">
       <h1>Kontakt</h1>
-      <div class="contact-info">
-        <h2>Metropol Jugendhilfe gGmbH</h2>
-        <p>
-          <strong>Adresse:</strong><br>
-          Mehringdamm 32<br>
-          10961 Berlin
-        </p>
-        <p>
-          <strong>Telefon:</strong> +49 (0) 30 863224170<br>
-          <strong>Email:</strong> info@metropoljugendhilfe.de
-        </p>
-      </div>
+      <p>Sie haben Fragen oder möchten mit uns in Kontakt treten? Wir sind gerne für Sie da. Nutzen Sie die untenstehenden Informationen, um uns zu erreichen.</p>
+      <h2>Adresse</h2>
+      <p>Metropol Jugendhilfe gGmbH<br>
+      Mehringdamm 32<br>
+      10961 Berlin</p>
+
+      <h2>Telefon</h2>
+      <p>+49 (0)30 863 22 41 70</p>
+
+      <h2>E-Mail</h2>
+      <p><a href="mailto:info@metropoljugendhilfe.de">info@metropoljugendhilfe.de</a></p>
+
     </div>
   </main>
   <footer class="site-footer">
@@ -84,4 +84,4 @@
     </div>
   </footer>
 </body>
-</html> 
+</html>
